[FIX] sap.m.Popover: Arrow is now visible in Belize themes
With BLI BGSOFUIRODOPI-3297 the overflow: hidden;  declaration was
removed from Popover.less in the base theme.
Now it is removed also from Popover.less in the sap_belize_base theme.

SNOW: DINC0237159

--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize_base/Popover.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize_base/Popover.less
@@ -73,7 +73,6 @@
 	outline: none;
 	max-width: 100%;
 	max-height: 100%;
-	overflow: hidden;
 	background: @sapUiGroupContentBackground;
 	border: none;
 	box-shadow: @sapUiContentShadow2;
